<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="horizontal"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/personal_details"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:ems="18"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/first_name" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:ems="18"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/surname_name"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/pan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:ems="16"
        android:inputType="textCapCharacters"
        android:minHeight="48dp"
        android:text="@string/pan" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:ems="18"
        android:inputType="number"
        android:minHeight="48dp"
        android:text="@string/aadhar" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:ems="18"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:text="@string/email" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:ems="18"
        android:inputType="date"
        android:minHeight="48dp"
        android:text="@string/date_of_birth" />

    <EditText
        android:id="@+id/father"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:ems="18"
        android:inputType="text"
        android:text="@string/father_s_name"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/mother"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:ems="18"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/mother_s_name" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:ems="18"
        android:inputType="phone"
        android:minHeight="48dp"
        android:text="@string/phone_number" />

    <EditText
        android:id="@+id/editTextTextPostalAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:ems="18"
        android:inputType="textPostalAddress"
        android:minHeight="48dp"
        android:text="@string/address" />

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:minHeight="32dp"
        android:text="Logout"
        app:layout_constraintTop_toBottomOf="@id/editTextTextPostalAddress"
        tools:ignore="HardcodedText,TouchTargetSizeCheck" />

</LinearLayout>




